--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Helios</a></h1>
+								<h1><a href="index.html" id="logo">Roleo</a></h1>
 								<hr />
-								<p>Another fine freebie by HTML5 UP</p>
+								<p>Window Repair Corporation</p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Start</a>
@@ -31,7 +31,7 @@
 						</div>
 
 					<!-- Nav -->
-						<nav id="nav">
+						<!-- <nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
@@ -56,14 +56,15 @@
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
-						</nav>
+						</nav> -->
 
 				</div>
 
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Hi. You're looking at <strong>Helios</strong>.</h2>
+						<h2>Hi. You're looking at <strong>Roleo window repair corporation
+						</strong>.</h2>
 					</header>
 				</section>
 
@@ -72,112 +73,71 @@
 					<div class="reel">
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<header>
+							<a href="#" class="image featured"><img src="images/1.jpg" alt="" /></a>
+							<!-- <header>
 								<h3><a href="#">Pulvinar sagittis congue</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							</header> -->
+							<p>Enhance your home's beauty and energy efficiency with our expert window installations.</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Fermentum sagittis proin</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<a href="#" class="image featured"><img src="images/Professional-Window-Replacement.jpg" alt="" /></a>
+							<p>Trust our experienced team to provide efficient and reliable window and door installation services.</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Sed quis rhoncus placerat</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<a href="#" class="image featured"><img src="images/Cracked-window-repairs.jpg" alt="" /></a>
+							<p>Available 24/7 for emergency glass repair. We'll restore your windows' safety and functionality.</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Ultrices urna sit lobortis</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<a href="#" class="image featured"><img src="images/Photo-collage-of-different-types-of-window-frame-10112022.jpg" alt="" /></a>
+							<p>Discover a wide range of stylish window options that enhance your home's aesthetics.</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Varius magnis sollicitudin</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<a href="#" class="image featured"><img src="images/how-to-build-custom-frameless-shower.jpg" alt=""/></a>
+							<p>Experience a complete bathroom transformation with our exceptional custom shower door installations.	</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Pulvinar sagittis congue</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Fermentum sagittis proin</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Sed quis rhoncus placerat</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Ultrices urna sit lobortis</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Varius magnis sollicitudin</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<a href="#" class="image featured"><img src="images/beautiful-mirror-placement-what-interior-designers-want-you-to-know.jpg" alt="" /></a>
+							<p>Add elegance and sophistication to your space with our custom mirror installation services.</p>
 						</article>
 
 					</div>
 				</section>
 
 			<!-- Main -->
-				<div class="wrapper style2">
+				<div class="wrapper style2" style="margin-top: 50px;">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/351450467_249729621014434_2149634912078647296_n.png" alt="" style="max-height: 700px;"/></a>
 						<header>
-							<h2><a href="#">Sed massa imperdiet magnis</a></h2>
-							<p>
+							<h2><a href="#">About us</a></h2>
+							<!-- <p>
 								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
 								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
-							</p>
+							</p> -->
 						</header>
 						<p>
-							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
-							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-							natoque aenean scelerisque.
+							Welcome to Roleo Window Repair Corporation, your trusted partner in creating beautiful and energy-efficient homes through expert window and door installations. Whether you are building a new home or looking to upgrade the windows in your existing property, you need an expert home window screen and door installation company. Roleo Window Repair Corporation is here to help.
+						</p>
+						<p>
+							With our extensive experience and unmatched expertise in the industry, we guarantee quick and efficient results, whether you're replacing a single window or upgrading all the windows in your home. We take pride in our work and strive to provide high-quality installations that will last for years. Serving New York, NY, Manhattan, NY, Long Island, NY, Brooklyn, NY, Queens, NY, and Staten Island, NY, our new construction window installation services are tailored to meet your needs.
+						</p>
+						<p>At Roleo Window Repair Corporation, we specialize in both commercial and residential window film glass installation. Our team of experienced professionals has been working in the window installation industry for many years, ensuring that your new windows are installed correctly and will provide years of reliable performance. We only use the highest quality materials and state-of-the-art installation techniques, ensuring that your new windows not only look great but also function flawlessly. Count on us to help you choose the right windows and doors for your home.
+						</p>
+						<p>
+							Contact Roleo Window Repair Corporation today for a free consultation and quote. Let us show you how our expertise and dedication to excellence can transform your home into a more comfortable, energy-efficient, and aesthetically pleasing space. Join countless satisfied customers who have trusted Roleo Window Repair Corporation with their window and door installation needs.
+
+
+
+
+
 						</p>
 						<footer>
-							<a href="#" class="button">Continue Reading</a>
+							<!-- <a href="#" class="button">Continue Reading</a> -->
 						</footer>
 					</article>
 
@@ -188,38 +148,36 @@
 
 					<section id="features" class="container special">
 						<header>
-							<h2>Morbi ullamcorper et varius leo lacus</h2>
-							<p>Ipsum volutpat consectetur orci metus consequat imperdiet duis integer semper magna.</p>
+							<h2 style="margin-bottom: 40px !important;">Our services</h2>
+							<!-- <p>Ipsum volutpat consectetur orci metus consequat imperdiet duis integer semper magna.</p> -->
 						</header>
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/istockphoto-1424202053-612x612.jpg" alt=""  style="height: 270px;"/></a>
 								<header>
-									<h3><a href="#">Gravida aliquam penatibus</a></h3>
+									<h3><a>Mirror Installation Services</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									Mirror Installation Services: Enhance your space with professional mirror wall installation. Our expert team handles all types of installations, from small accents to full-wall mirrors. Elevate your business with custom commercial mirror designs. Trust our skills and experience for seamless, precise installations. Enjoy the finished product while we handle the details.
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/image4.jpg" alt="" style="height: 270px;" /></a>
 								<header>
-									<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+									<h3><a>Shower Door Glass Installation 
+									</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									Shower Door Glass Installation: Trust Window Repair Service for industry-leading delta glass shower door repair and installation. Our experienced professionals provide high-quality, reliable service tailored to your needs. From Dreamline to frameless sliding doors, we ensure a perfect fit and lasting results. Count on us for hassle-free shower glass door services.
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/Door_Installation_Cost_Main.jpg" alt="" style="height: 270px;"/></a>
 								<header>
-									<h3><a href="#">Magna laoreet et aliquam</a></h3>
+									<h3><a>Door Installation Services</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									Door Installation Services: Trust our experienced professionals for front door installation and repair. From new screen entry doors to handle replacements, we handle it all. Choose the perfect door for your space, and our team ensures a secure and precise installation. We also offer commercial front door window repair.
 								</p>
 							</article>
 						</div>
@@ -231,125 +189,23 @@
 				<div id="footer">
 					<div class="container">
 						<div class="row">
-
-							<!-- Tweets -->
-								<section class="col-4 col-12-mobile">
-									<header>
-										<h2 class="icon brands fa-twitter circled"><span class="label">Tweets</span></h2>
-									</header>
-									<ul class="divided">
-										<li>
-											<article class="tweet">
-												Amet nullam fringilla nibh nulla convallis tique ante sociis accumsan.
-												<span class="timestamp">5 minutes ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Hendrerit rutrum quisque.
-												<span class="timestamp">30 minutes ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Curabitur donec nulla massa laoreet nibh. Lorem praesent montes.
-												<span class="timestamp">3 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Lacus natoque cras rhoncus curae dignissim ultricies. Convallis orci aliquet.
-												<span class="timestamp">5 hours ago</span>
-											</article>
-										</li>
-									</ul>
-								</section>
-
-							<!-- Posts -->
-								<section class="col-4 col-12-mobile">
-									<header>
-										<h2 class="icon solid fa-file circled"><span class="label">Posts</span></h2>
-									</header>
-									<ul class="divided">
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Nisl fermentum integer</a></h3>
-												</header>
-												<span class="timestamp">3 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Phasellus portitor lorem</a></h3>
-												</header>
-												<span class="timestamp">6 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Magna tempus consequat</a></h3>
-												</header>
-												<span class="timestamp">Yesterday</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Feugiat lorem ipsum</a></h3>
-												</header>
-												<span class="timestamp">2 days ago</span>
-											</article>
-										</li>
-									</ul>
-								</section>
-
-							<!-- Photos -->
-								<section class="col-4 col-12-mobile">
-									<header>
-										<h2 class="icon solid fa-camera circled"><span class="label">Photos</span></h2>
-									</header>
-									<div class="row gtr-25">
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic15.jpg" alt="" /></a>
-										</div>
-									</div>
-								</section>
-
-						</div>
-						<hr />
-						<div class="row">
 							<div class="col-12">
 
 								<!-- Contact -->
 									<section class="contact">
-										<header>
-											<h3>Nisl turpis nascetur interdum?</h3>
-										</header>
-										<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
+										<p>Our professional team welcomes you and we are here to provide best services. How can we help you?</p>
+										<p style="margin-bottom: 0;">24/7 emergency services 
+										</p>
+										<p> 
+											<svg  style="margin-right: 7px; position:relative; top:2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="green" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+												<path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+											</svg>
+											+17324963575
+										</p>
 										<ul class="icons">
 											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 											<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-											<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 											<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
 										</ul>
 									</section>
