--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/roleo-website-favicon-color.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="homepage is-preload">
@@ -22,12 +23,18 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Roleo</a></h1>
+								<h1><a href="index.html" id="logo">
+								<img id="logo" style="position:relative; top: 48px; width:150px;" src="images/roleo-website-favicon-color.png" alt="">									
+								 Roleo</a></h1>
 								<hr />
 								<p>Window Repair Corporation</p>
 							</header>
-							<footer>
-								<a href="#banner" class="button circled scrolly">Start</a>
+							<footer style="margin-top: 100px !important;">
+								<a href="#banner">
+									<svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+										<path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
+									</svg>
+								</a>
 							</footer>
 						</div>
 
@@ -110,7 +117,7 @@
 				</section>
 
 			<!-- Main -->
-				<div class="wrapper style2" style="margin-top: 50px;">
+				<div class="wrapper style2" style="margin-top: 50px; padding-bottom: 0px;">
 
 					<article id="main" class="container special">
 						<a href="#" class="image featured"><img src="images/351450467_249729621014434_2149634912078647296_n.png" alt="" style="max-height: 700px;"/></a>
@@ -129,7 +136,7 @@
 						</p>
 						<p>At Roleo Window Repair Corporation, we specialize in both commercial and residential window film glass installation. Our team of experienced professionals has been working in the window installation industry for many years, ensuring that your new windows are installed correctly and will provide years of reliable performance. We only use the highest quality materials and state-of-the-art installation techniques, ensuring that your new windows not only look great but also function flawlessly. Count on us to help you choose the right windows and doors for your home.
 						</p>
-						<p>
+						<p style="padding-bottom: 20px;">
 							Contact Roleo Window Repair Corporation today for a free consultation and quote. Let us show you how our expertise and dedication to excellence can transform your home into a more comfortable, energy-efficient, and aesthetically pleasing space. Join countless satisfied customers who have trusted Roleo Window Repair Corporation with their window and door installation needs.
 
 
@@ -141,11 +148,12 @@
 							<!-- <a href="#" class="button">Continue Reading</a> -->
 						</footer>
 					</article>
-
+					
 				</div>
 
 			<!-- Features -->
-				<div class="wrapper style1">
+
+				<div class="wrapper style1" style="margin-bottom: 0;">
 
 					<section id="features" class="container special">
 						<header>
